# EcommerceAustral

./: .gitignore  CMakeLists.txt  EcommerceUML.mdj  README.md
docs/: EcommerceUML.mdj  README.docx
src/: Admin.c  Admin.h  Bank.c  Bank.h  BankAccount.c  BankAccount.h  BookInformation.c  BookInformation.h  CMakeLists.txt  Cart.c  Cart.h  College.c  College.h  Invoice.c  Invoice.h  OperationCertificate.c  OperationCertificate.h  Payment.c  Payment.h  PaymentMethod.c  PaymentMethod.h  ProductBook.c  ProductBook.h  Provider.c  Provider.h  Student.c  Student.h  Subject.c  Subject.h  SupportDatabase.c  SupportDatabase.h  SupportMessage.c  SupportMessage.h  SupportStaff.c  SupportStaff.h  Transaction.c  Transaction.h  UserDatabase.c  UserDatabase.h  UserLog.c  (+3 more)
src/Bank/: Bank.c  Bank.h  BankAccount.c  BankAccount.h  CMakeLists.txt  OperationCertificate.c  Transaction.c
src/College/: BookInformation.c  BookInformation.h  CMakeLists.txt  College.c  College.h  Student.c  Student.h  Subject.c  Subject.h
src/Ecommerce/: Admin.c  Admin.h  CMakeLists.txt  Cart.c  Cart.h  Invoice.h  Payment.h  PaymentMethod.h  ProductBook.c  ProductBook.h  Provider.c  Provider.h  SupportDatabase.c  SupportMessage.c  SupportMessage.h  SupportStaff.c  SupportStaff.h  UserDatabase.c  UserDatabase.h  UserLog.c
src/Menu/: AdminMenu.c  CMakeLists.txt  InputTool.c  InputTool.h  LoginMenu.c  ProviderMenu.c  StudentMenu.c  StudentMenu.h  SupportStaffMenu.c
src/Util/: ScanUtil.c
src/structs/: CMakeLists.txt  DoubleNode.c  DoubleNode.h  LinkedList.c  LinkedList.h  LinkedStack.c  LinkedStack.h  Node.c  Node.h  StackTest.c  StaticList.c  StaticList.h  StaticStack.c  StaticStack.h
test/: AllTests.c  CMakeLists.txt  CartTests.c  CollegeTests.c  InvoiceTests.c  ProductBookTests.c  SupportTests.c  UserDatabaseTests.c
