# set(core_SRCS College/BookInformation.c Ecommerce/ProductBook.c Ecommerce/Cart.c Ecommerce/Invoice.c College/Student.c Bank/Bank.c Bank/BankAccount.c Bank/Transaction.c Ecommerce/Provider.c Ecommerce/Admin.c Ecommerce/SupportStaff.c Ecommerce/UserDatabase.c Ecommerce/UserLog.c Bank/OperationCertificate.c College/Subject.c College/Subject.h College/College.c College/College.h Ecommerce/SupportDatabase.c Ecommerce/SupportMessage.c Ecommerce/PaymentMethod.c Ecommerce/PaymentMethod.h Ecommerce/Payment.c Ecommerce/Payment.h structs/StaticList.c Menu/LoginMenu.c Menu/StudentMenu.c Menu/AdminMenu.c Menu/SupportStaffMenu.c Menu/ProviderMenu.c Menu/InputTool.c)
# add_library(core ${core_SRCS})
add_subdirectory(Util)
add_subdirectory(Menu)
add_subdirectory(Ecommerce)
add_subdirectory(Bank)
add_subdirectory(College)
add_subdirectory(structs)
add_executable(exe main.c)
target_link_libraries(exe core)
target_link_libraries(exe util)
target_link_libraries(exe menu)
target_link_libraries(exe ecommerce)
target_link_libraries(exe college)
target_link_libraries(exe struct)