add_subdirectory(Util)
add_subdirectory(Menu)
add_subdirectory(Ecommerce)
add_subdirectory(Bank)
add_subdirectory(College)
add_executable(exe main.c)
target_link_libraries(exe util)
target_link_libraries(exe menu)
target_link_libraries(exe ecommerce)
target_link_libraries(exe college)
target_link_libraries(exe bank)